Fixed header spacing.

--- a/styles.css
+++ b/styles.css
@@ -737,8 +737,8 @@ input, textarea {
     .welcome h1 {
         font-size: 1.5rem;
     }
-    .welcome h2 {
-        font-size: 1.5rem;
+    .welcome h3 {
+        font-size: .75rem;
     }
     .welcome p {
         display: none;
